@@ -1,3 +1,7 @@
+[B]Version 2.8.9[/B]
+
+- added token expiration check
+
 [B]Version 2.8.8[/B]
 
 - changes for Hulu plus users. requires librtmp 2.4+
